Added the possibility to perform QC on the GatingSet.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,22 @@
 
 export(PeacoQC)
 export(PeacoQCHeatmap)
+export(PeacoQC_GatingSet)
 export(PlotPeacoQC)
 export(RemoveDoublets)
 export(RemoveMargins)
 import(ComplexHeatmap)
 import(ggplot2)
 importFrom(circlize,colorRamp2)
+importFrom(flowCore,read.FCS)
+importFrom(flowWorkspace,GatingSet)
+importFrom(flowWorkspace,cytoframe_to_flowFrame)
+importFrom(flowWorkspace,gh_pop_get_data)
+importFrom(flowWorkspace,gs_get_pop_paths)
+importFrom(flowWorkspace,gs_pop_add)
+importFrom(flowWorkspace,load_cytoset_from_fcs)
 importFrom(flowWorkspace,pData)
+importFrom(flowWorkspace,sampleNames)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
@@ -16,4 +25,5 @@ importFrom(grid,gpar)
 importFrom(grid,grid.text)
 importFrom(methods,is)
 importFrom(utils,read.delim)
+importFrom(utils,tail)
 importFrom(utils,write.table)
